--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,6 +19,6 @@ jobs:
           server: ftp.gabnetic.com
           username: gabnetic
           password: NZ*mG&##%%4%
-          server-dir: /folcklore.gabnetic.com/
+          server-dir: /intisoft.gabnetic.com/
 
      
