--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,14 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - APP_KEY=${APP_KEY}
       - APP_URL=${APP_URL:-http://localhost}
+      - CACHE_DRIVER=redis
+      - SESSION_DRIVER=redis
+      - REDIS_HOST=redis
     volumes:
       - storage:/var/www/storage
-      - logs:/var/www/storage/logs
     depends_on:
-      mysql:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80"]
-      timeout: 10s
-      retries: 5
-      interval: 30s
-      start_period: 60s
+      - mysql
+      - redis
     networks:
       - folcklore-network
 
@@ -42,18 +38,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE:-folcklore}
-      MYSQL_USER: ${DB_USERNAME:-root}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD}"]
-      timeout: 30s
-      retries: 15
-      interval: 10s
-      start_period: 30s
     networks:
       - folcklore-network
 
@@ -74,8 +62,6 @@ volumes:
   redis_data:
     driver: local
   storage:
-    driver: local
-  logs:
     driver: local
 
 networks:
