--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,64 +5,55 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: folcklore-app
-    restart: unless-stopped
     ports:
       - "3003:80"
+    volumes:
+      - .:/var/www/html
+      - ./storage:/var/www/html/storage
+      - ./database:/var/www/html/database
     environment:
       - APP_ENV=production
       - APP_DEBUG=false
+      - APP_URL=http://localhost:3003
       - DB_CONNECTION=mysql
       - DB_HOST=mysql
       - DB_PORT=3306
-      - DB_DATABASE=${DB_DATABASE:-folcklore}
-      - DB_USERNAME=${DB_USERNAME:-root}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=folcklore
+      - DB_USERNAME=folcklore
+      - DB_PASSWORD=folcklore
       - APP_KEY=${APP_KEY}
-      - APP_URL=${APP_URL:-http://localhost}
-      - CACHE_DRIVER=redis
-      - SESSION_DRIVER=redis
-      - REDIS_HOST=redis
-    volumes:
-      - storage:/var/www/storage
     depends_on:
       - mysql
       - redis
     networks:
       - folcklore-network
 
-  mysql:
-    image: mysql:8.0
-    container_name: folcklore-mysql
-    restart: unless-stopped
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_DATABASE:-folcklore}
-    volumes:
-      - mysql_data:/var/lib/mysql
-    ports:
-      - "3306:3306"
-    networks:
-      - folcklore-network
-
   redis:
     image: redis:7-alpine
-    container_name: folcklore-redis
-    restart: unless-stopped
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data
+      - redis-data:/data
+    networks:
+      - folcklore-network
+
+  mysql:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: folcklore
+      MYSQL_USER: folcklore
+      MYSQL_PASSWORD: folcklore
+    volumes:
+      - mysql-data:/var/lib/mysql
     networks:
       - folcklore-network
 
 volumes:
-  mysql_data:
-    driver: local
-  redis_data:
-    driver: local
-  storage:
-    driver: local
+  redis-data:
+  mysql-data:
 
 networks:
   folcklore-network:
