--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,45 +16,8 @@ services:
       - APP_DEBUG=false
       - APP_URL=http://localhost:3003
       - DB_CONNECTION=mysql
-      - DB_HOST=mysql
+      - DB_HOST=127.0.0.1
       - DB_PORT=3306
       - DB_DATABASE=folcklore
       - DB_USERNAME=folcklore
       - DB_PASSWORD=folcklore
-      - APP_KEY=${APP_KEY}
-    depends_on:
-      - mysql
-      - redis
-    networks:
-      - folcklore-network
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
-    networks:
-      - folcklore-network
-
-  mysql:
-    image: mysql:8.0
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: folcklore
-      MYSQL_USER: folcklore
-      MYSQL_PASSWORD: folcklore
-    volumes:
-      - mysql-data:/var/lib/mysql
-    networks:
-      - folcklore-network
-
-volumes:
-  redis-data:
-  mysql-data:
-
-networks:
-  folcklore-network:
-    driver: bridge
